--- a/app/public/home.html
+++ b/app/public/home.html
@@ -17,7 +17,7 @@
       <h1 class="text-center"><span class="fa fa-fire"></span> The Scientific Way to Find a Soul Mate</h1>
       <br>
       <div class="text-center">
-        <a href="/survey.html"><button class="btn btn-lg btn-primary"><span class="fa fa-list-alt"></span> Take the survey</button></a>
+        <a href="/survey"><button class="btn btn-lg btn-primary"><span class="fa fa-list-alt"></span> Take the survey</button></a>
       </div>
 
     </div>
